--- a/Godot/.godot/editor/editor_layout.cfg
+++ b/Godot/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Init.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/test/", "res://Scenes/", "res://Scenes/town/", "res://Scenes/town/Elvengard/", "res://Scenes/test/", "res://Scenes/test/GuardAI/", "res://Prefabs/", "res://ModelView/UI/", "res://ModelView/UI/UILogin/", "res://Model/Demo/", "res://Model/Demo/Scene/", "res://Model/Demo/AI/", "res://Hotfix/Demo/", "res://Hotfix/Demo/Scene/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/town/Elvengard/Elvengard.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://src/test/", "res://Scenes/", "res://Scenes/town/", "res://Scenes/town/Elvengard/", "res://Scenes/test/GuardAI/", "res://Prefabs/", "res://Prefabs/role/", "res://Prefabs/role/character/", "res://ModelView/UI/", "res://ModelView/UI/UILogin/", "res://Model/Demo/", "res://Model/Demo/Scene/", "res://Model/Demo/AI/", "res://Hotfix/Demo/", "res://Hotfix/Demo/Scene/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Init.tscn", "res://Scenes/UILogin.tscn", "res://Prefabs/unit.tscn", "res://Prefabs/CameraRoot.tscn", "res://Scenes/Map1.tscn", "res://Prefabs/role/character/Swordman.tscn", "res://Prefabs/role/template/RoleTemplate.tscn", "res://Prefabs/map_1.tscn", "res://Scenes/UI/characterCreate/Start.tscn", "res://Scenes/Main.tscn", "res://Scenes/town/Elvengard/Elvengard.tscn")
-current_scene="res://Scenes/Init.tscn"
+open_scenes=PackedStringArray("res://Scenes/Init.tscn", "res://Scenes/UILogin.tscn", "res://Prefabs/unit.tscn", "res://Prefabs/CameraRoot.tscn", "res://Scenes/Main.tscn", "res://Scenes/town/Elvengard/Elvengard.tscn", "res://Scenes/UILobby.tscn", "res://Scenes/town/Elvengard/stage_01.tscn", "res://Scenes/town/Elvengard/stage_02.tscn", "res://Prefabs/role/character/Swordman.tscn", "res://Scenes/skin.tscn", "res://Scenes/Idle.tscn", "res://Scenes/Map1.tscn")
+current_scene="res://Scenes/town/Elvengard/Elvengard.tscn"
 center_split_offset=-295
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
