--- a/Godot/.godot/editor/project_metadata.cfg
+++ b/Godot/.godot/editor/project_metadata.cfg
@@ -14,6 +14,7 @@ last_selected_language="C#"
 
 create_new_node=Rect2(510, 190, 900, 700)
 project_settings=Rect2(360, 190, 1200, 700)
+editor_settings=Rect2(510, 190, 900, 700)
 
 [debug_options]
 
