--- a/Godot/.godot/editor/project_metadata.cfg
+++ b/Godot/.godot/editor/project_metadata.cfg
@@ -19,6 +19,20 @@ editor_settings=Rect2(510, 190, 900, 700)
 [debug_options]
 
 server_keep_open=true
+run_main_feature_tags=""
+multiple_instances_enabled=false
+run_instances_config=Array[Dictionary]([{
+"arguments": "",
+"features": "",
+"override_args": true,
+"override_features": false
+}, {
+"arguments": "",
+"features": "",
+"override_args": false,
+"override_features": false
+}])
+run_instance_count=1.0
 
 [uid_upgrade_tool]
 
