--- a/Godot/.godot/editor/editor_layout.cfg
+++ b/Godot/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Init.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/town/", "res://Scenes/town/Elvengard/", "res://Scenes/test/", "res://Scenes/dungeon/", "res://Prefabs/", "res://Prefabs/role/", "res://Prefabs/role/template/", "res://Prefabs/role/character/", "res://Prefabs/monster/", "res://Prefabs/monster/goblin/", "res://Loader/", "res://Loader/MonoBehaviour/", "res://HotfixView/Client/", "res://HotfixView/Client/Demo/", "res://HotfixView/Client/Demo/UI/", "res://HotfixView/Client/Demo/UI/UILogin/", "res://HotfixView/Client/Demo/UI/UILobby/", "res://HotfixView/Client/Demo/UI/UIHelp/", "res://HotfixView/Client/Demo/Scene/", "res://Hotfix/Client/", "res://Hotfix/Client/Demo/", "res://Hotfix/Client/Demo/Scene/", "res://addons/", "res://addons/VirtualJoyStick/", "res://addons/VirtualJoyStick/textures/", "res://addons/VirtualJoyStick/test/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/town/Elvengard/Elvengard.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/town/", "res://Scenes/town/Elvengard/", "res://Scenes/test/", "res://Scenes/dungeon/", "res://Prefabs/", "res://Prefabs/role/", "res://Prefabs/role/template/", "res://Prefabs/role/character/", "res://Prefabs/monster/", "res://Prefabs/monster/goblin/", "res://Loader/", "res://Loader/MonoBehaviour/", "res://HotfixView/", "res://HotfixView/Client/", "res://HotfixView/Client/Demo/", "res://HotfixView/Client/Demo/UI/", "res://HotfixView/Client/Demo/UI/UILogin/", "res://HotfixView/Client/Demo/UI/UILobby/", "res://HotfixView/Client/Demo/UI/UIHelp/", "res://HotfixView/Client/Demo/Scene/", "res://Hotfix/Client/", "res://Hotfix/Client/Demo/", "res://Hotfix/Client/Demo/Scene/", "res://addons/", "res://addons/VirtualJoyStick/textures/", "res://addons/VirtualJoyStick/test/")
 dock_node_current_tab=0
 dock_history_include_scene=false
 dock_history_include_global=false
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Init.tscn", "res://Prefabs/role/character/Swordman.tscn", "res://Prefabs/Camera2DRoot.tscn", "res://Prefabs/role/template/AiTemplate.tscn", "res://Prefabs/role/template/RoleTemplate.tscn", "res://Prefabs/monster/goblin/Goblin.tscn", "res://Scenes/town/Elvengard/stage_01.tscn", "res://Scenes/town/Elvengard/Elvengard.tscn", "res://Scenes/UIMain.tscn", "res://Scenes/Idle.tscn", "res://addons/VirtualJoyStick/test/Test.tscn", "res://addons/VirtualJoyStick/VirtualJoyStick.tscn")
-current_scene="res://Scenes/Init.tscn"
+open_scenes=PackedStringArray("res://Scenes/Init.tscn", "res://Prefabs/role/character/Swordman.tscn", "res://Prefabs/Camera2DRoot.tscn", "res://Prefabs/role/template/AiTemplate.tscn", "res://Prefabs/role/template/RoleTemplate.tscn", "res://Prefabs/monster/goblin/Goblin.tscn", "res://Scenes/town/Elvengard/stage_01.tscn", "res://Scenes/town/Elvengard/Elvengard.tscn", "res://Scenes/UIMain.tscn")
+current_scene="res://Scenes/UIMain.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
