--- a/Godot/.godot/editor/project_metadata.cfg
+++ b/Godot/.godot/editor/project_metadata.cfg
@@ -17,6 +17,7 @@ last_selected_language="C#"
 create_new_node=Rect2(510, 190, 900, 700)
 project_settings=Rect2(360, 190, 1200, 700)
 editor_settings=Rect2(510, 190, 900, 700)
+export=Rect2(510, 290, 900, 608)
 
 [debug_options]
 
